--- a/material.io/sass/material.scss
+++ b/material.io/sass/material.scss
@@ -15,6 +15,7 @@ $mdc-typography-styles-button: (
 @import "@material/elevation/mdc-elevation";
 @import "@material/dialog/mdc-dialog";
 @import "@material/textfield/mdc-text-field";
+@import "@material/textfield/helper-text/mdc-text-field-helper-text";
 @import "@material/line-ripple/mdc-line-ripple";
 @import "@material/select/mdc-select";
 @import "@material/form-field/mdc-form-field";
