--- a/pyVerein/app/templates/app/_attributions.html
+++ b/pyVerein/app/templates/app/_attributions.html
@@ -2,11 +2,11 @@
 <aside class="mdc-dialog" id="attribution-dialog">
     <div class="mdc-dialog__surface">
         <header class="mdc-dialog__header">
-            <h2 id="mdc-dialog-with-list-label" class="mdc-dialog__header__title">
+            <h2 class="mdc-dialog__header__title">
                 {% trans 'Attributions' %}
             </h2>
         </header>
-        <section id="mdc-dialog-with-list-description" class="mdc-dialog__body mdc-dialog__body--scrollable">
+        <section class="mdc-dialog__body mdc-dialog__body--scrollable">
             <p>
                 <h3>
                     Standard Avatar-Image
