--- a/pyVerein/utils/templates/utils/_textfield.html
+++ b/pyVerein/utils/templates/utils/_textfield.html
@@ -1,7 +1,11 @@
 {% load widget_tweaks %}
 
 <div class="mdc-text-field mdc-input">
-    {% render_field field class+="mdc-text-field__input" data-next=next %}
+    {% if autofocus %}
+        {% render_field field class+="mdc-text-field__input" data-next=next autofocus="" %}
+    {% else %}
+        {% render_field field class+="mdc-text-field__input" data-next=next %}
+    {% endif %}
     <label class="mdc-floating-label" for="{{ field.id_for_label }}">
         {{ label }}
     </label>
