--- a/material.io/sass/app.scss
+++ b/material.io/sass/app.scss
@@ -12,6 +12,10 @@ body{
     font-size: 16px;
 }
 
+a {
+    color: #d50000;
+}
+
 div.main{
     width: 100%;
 }
@@ -138,6 +142,11 @@ div.dataTables_wrapper{
         }
     }
     
+}
+
+
+.mdc-text-field-helper-text{
+    font-size: 16px;
 }
 
 footer#page-footer{
