--- a/pyVerein/finance/templates/finance/debitor/edit.html
+++ b/pyVerein/finance/templates/finance/debitor/edit.html
@@ -10,7 +10,7 @@
 {% endblock %} 
 
 {% block page_title %} 
-    {% trans 'Edit ddebitor' %} 
+    {% trans 'Edit debitor' %} 
 {% endblock %} 
 
 {% block title %}
