--- a/pyVerein/finance/templates/finance/transaction/create.html
+++ b/pyVerein/finance/templates/finance/transaction/create.html
@@ -27,7 +27,7 @@
                     <div class="heading"></div>
                 </div>
                 <div class="modal-body">
-                    <table id="account-list" class="table table-bordered table-striped table-hover dataTable"
+                    <table id="account-list" class="mdl-data-table dataTable"
                         cellspacing="0"
                         width="100%">
                         <thead>
@@ -49,7 +49,7 @@
                 </h2>
             </header>
             <section id="mdc-dialog-with-list-description" class="mdc-dialog__body mdc-dialog__body--scrollable">
-                <table id="selection-list" class="table table-bordered table-striped table-hover dataTable"
+                <table id="selection-list" class="mdl-data-table dataTable"
                     cellspacing="0"
                     width="100%">
                     <thead>
@@ -68,7 +68,7 @@
     </aside>
     <div class="main-narrow">
         <div class="detail-content  mdc-elevation--z4">
-            <form action="." method="POST" class="form-horizontal" data-toggle="validator" id="form">
+            <form action="{{ save_url }}" method="POST" class="form-horizontal" data-toggle="validator" id="form">
                 {% csrf_token %}
                 <div class="heading mdc-typography--overline">
                     {% trans 'General' %}
@@ -138,50 +138,48 @@
                     <a href="{% url 'app:index' %}" class="mdc-button">{% trans 'Cancel' %}</a>
                 </div>
             </form>
+            <div class="heading mdc-typography--overline" style="margin-top:30px;">
+                {% trans 'Corresponding transactions' %}
+            </div>
+            <table id="transactions" class="mdl-data-table dataTable" cellspacing="0" width="100%">
+                <thead>
+                    <tr>
+                        <th class="mdl-data-table__cell--non-numeric">{% trans 'Account' %}</th>
+                        <th>{% trans 'Debit' %}</th>
+                        <th>{% trans 'Credit' %}</th>
+                        <th class="mdl-data-table__cell--non-numeric">{% trans 'Cost center' %}</th>
+                        <th class="mdl-data-table__cell--non-numeric">{% trans 'Cost object' %}</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for key, transaction in transactions.items %}
+                        <tr data-step="{% url 'finance:transaction_step' step=key %}">
+                            <td class="mdl-data-table__cell--non-numeric">
+                                {{ transaction.account }}
+                            </td>
+                            <td>
+                                {{ transaction.debit|floatformat:2|default_if_none:"" }}
+                            </td>
+                            <td>
+                                {{ transaction.credit|floatformat:2|default_if_none:"" }}
+                            </td>
+                            <td class="mdl-data-table__cell--non-numeric">
+                                {{ transaction.cost_center|default_if_none:"" }}
+                            </td>
+                            <td class="mdl-data-table__cell--non-numeric">
+                                {{ transaction.cost_object|default_if_none:"" }}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
     </div>
-            {% comment %} {% if transactions %}
-                <div class="x_panel">
-                    <div class="x_content data">
-                        <table id="transactions" class="table table-bordered table-striped table-hover dataTable" cellspacing="0" width="100%">
-                            <thead>
-                                <tr>
-                                    <th>{% trans 'Account' %}</th>
-                                    <th>{% trans 'Transaction text' %}</th>
-                                    <th>{% trans 'Debit' %}</th>
-                                    <th>{% trans 'Credit' %}</th>
-                                    <th>{% trans 'Cost center' %}</th>
-                                    <th>{% trans 'Cost object' %}</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for transaction in transactions %}
-                                    <tr>
-                                        <td>
-                                            {{ transaction.account.number }} {{ transaction.account.name }}
-                                        </td>
-                                        <td>
-                                            {{ transaction.text }}
-                                        </td>
-                                        <td>
-                                            {{ transaction.debit|default_if_none:"" }}
-                                        </td>
-                                        <td>
-                                            {{ transaction.credit|default_if_none:"" }}
-                                        </td>
-                                        <td>
-                                            {{ transaction.cost_center.number|default_if_none:"" }} {{ transaction.cost_center.name|default_if_none:"" }}
-                                        </td>
-                                        <td>
-                                            {{ transaction.cost_object.number|default_if_none:"" }} {{ transaction.cost_object.name|default_if_none:"" }}
-                                        </td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            {% endif %} {% endcomment %}
+    {% if transactions %}
+        <div class="mdc-elevation--z4">
+            
+        </div>
+    {% endif %}
 {% endblock %}
 
 {% block foot %}
@@ -284,5 +282,10 @@
             input_field.val(field_val);
             info_field.html(info_val);
         }
+
+        // Steps
+        $('tr').on('click', function(){
+            window.location = $(this).data('step');
+        })
     </script>
 {% endblock %}
