--- a/material.io/sass/app.scss
+++ b/material.io/sass/app.scss
@@ -159,6 +159,67 @@ footer#page-footer{
     padding-right: 1rem;
     padding-left: 1rem;
 }
+
+.alert-minimalist {
+	border-radius: 0px;
+    padding: 10px;
+    min-width: 300px;
+    min-height: 50px;
+    display: inline-flex !important;
+    align-items: center;
+    font-size: 1.2rem;
+    
+    .mdc-button__icon{
+        margin:0px;
+        width: auto;
+        height: auto;
+    }
+}
+.alert-minimalist.error {
+	background-color: #d50000;
+	border-color: #d50000;
+    color: #FAFAFA;
+    
+    .mdc-button__icon{
+        color: #FAFAFA;
+    }
+}
+.alert-minimalist.success {
+	background-color: #00c853;
+	border-color: #00c853;
+    color: #212121;  
+      
+    .mdc-button__icon{
+        color: #212121;
+    }
+}
+.alert-minimalist.warning {
+	background-color: #ffd600;
+	border-color: #ffd600;
+	color: #212121;  
+      
+    .mdc-button__icon{
+        color: #212121;
+    }
+}
+.alert-minimalist.info {
+	background-color: #0091ea;
+	border-color: #0091ea;
+	color: #212121;  
+      
+    .mdc-button__icon{
+        color: #212121;
+    }
+}
+.alert-minimalist.debug {
+	background-color: #eeeeee;
+	border-color: #eeeeee;
+	color: #212121;  
+      
+    .mdc-button__icon{
+        color: #212121;
+    }
+}
 // html {
 //     height: 100%;
 // }
