--- a/pyVerein/members/templates/members/member_list.html
+++ b/pyVerein/members/templates/members/member_list.html
@@ -72,11 +72,26 @@
                     true,
                 "columns":
                     [
-                        {"data": "last_name"},
-                        {"data": "first_name"},
-                        {"data": "street"},
-                        {"data": "zipcode"},
-                        {"data": "city"}
+                        {
+                            "data": "last_name",
+                            "className": "mdl-data-table__cell--non-numeric"
+                        },
+                        {
+                            "data": "first_name",
+                            "className": "mdl-data-table__cell--non-numeric"
+                        },
+                        {
+                            "data": "street",
+                            "className": "mdl-data-table__cell--non-numeric"
+                        },
+                        {
+                            "data": "zipcode",
+                            "className": "mdl-data-table__cell--non-numeric"
+                        },
+                        {
+                            "data": "city",
+                            "className": "mdl-data-table__cell--non-numeric"
+                        }
                     ],
                 "createdRow":
                     function (row, data, index) {
