--- a/pyVerein/app/static/app/css/login.css
+++ b/pyVerein/app/static/app/css/login.css
@@ -3,7 +3,8 @@
   min-height: 0px;
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  margin-top: 10px; }
   .login .main .form-block {
     width: 20%;
     text-align: center; }
