--- a/pyVerein/finance/templates/finance/debitor/list.html
+++ b/pyVerein/finance/templates/finance/debitor/list.html
@@ -69,8 +69,14 @@
                     true,
                 "columns":
                     [
-                        {"data": "number"},
-                        {"data": "name"},
+                        {
+                            "data": "number",
+                            "className": "mdl-data-table__cell--non-numeric"
+                        },
+                        {
+                            "data": "name",
+                            "className": "mdl-data-table__cell--non-numeric"
+                        },
                     ],
                 "createdRow":
                     function (row, data, index) {
