--- a/pyVerein/finance/templates/finance/transaction/list.html
+++ b/pyVerein/finance/templates/finance/transaction/list.html
@@ -4,67 +4,52 @@
 
 {% block head %}
     <!-- DataTables -->
-    <link rel="stylesheet"
-          href="{% static 'app/vendors/datatables.net-bs/css/dataTables.bootstrap.min.css' %}">
-    <link href="{% static 'app/vendors/datatables.net-buttons-bs/css/buttons.bootstrap.min.css" rel="stylesheet' %}">
-    <link href="{% static 'app/vendors/datatables.net-fixedheader-bs/css/fixedHeader.bootstrap.min.css" rel="stylesheet' %}">
-    <link href="{% static 'app/vendors/datatables.net-responsive-bs/css/responsive.bootstrap.min.css" rel="stylesheet' %}">
-    <link href="{% static 'app/vendors/datatables.net-scroller-bs/css/scroller.bootstrap.min.css" rel="stylesheet' %}">
+    <link rel="stylesheet" href="{% static 'app/vendors/datatables.net/material.min.css' %}">
+    <link rel="stylesheet" href="{% static 'app/vendors/datatables.net/datatables.material.min.css' %}">
+{% endblock %}
+
+{% block page_title %}
+    {% trans 'Transactions' %}
 {% endblock %}
 
 {% block title %}
-    {% trans 'Impersonal account-List' %}
+    {% trans 'Transactions' %}
 {% endblock %}
 
 {% block content %}
-    <div class="row">
-        <div class="col-md-12">
-            <div class="x_panel">
-                <div class="x_content">
-                    <table id="accountlist" class="table table-bordered table-striped table-hover dataTable"
-                           cellspacing="0"
-                           width="100%">
-                        <thead>
-                        <tr>
-                            <th>{% trans 'Impersonal account number' %}</th>
-                            <th>{% trans 'Impersonal account name' %}</th>
-                        </tr>
-                        </thead>
-                        <tfoot>
-                        <tr>
-                            <th>{% trans 'Impersonal account number' %}</th>
-                            <th>{% trans 'Impersonal account name' %}</th>
-                        </tr>
-                        </tfoot>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
+    <table id="transactionlist" class="mdl-data-table mdl-js-data-table mdl-data-table--non-linkable"
+            cellspacing="0"
+            width="100%">
+        <thead>
+            <tr>
+                <th>{% trans 'Date' %}</th>
+                <th>{% trans 'Document number' %}</th>
+                <th>{% trans 'Account' %}</th>
+                <th>{% trans 'Transaction text' %}</th>
+                <th>{% trans 'Debit' %}</th>
+                <th>{% trans 'Credit' %}</th>
+                <th>{% trans 'Cost center' %}</th>
+                <th>{% trans 'Cost object' %}</th>
+            </tr>
+        </thead>
+    </table>
+    <a href ="{% url 'finance:transaction_create' %}" class="mdc-fab mdc-fab--absolute-bottom-right" aria-label="">
+        <i class="mdc-fab__icon fa fa-plus"></i>
+    </a>
 {% endblock %}
 
 {% block foot %}
     <!-- Datatables -->
-    <script src="{% static 'app/vendors/datatables.net/js/jquery.dataTables.min.js' %}"></script>
-    <script src="{% static 'app/vendors/datatables.net-bs/js/dataTables.bootstrap.min.js' %}"></script>
-    <script src="{% static 'app/vendors/datatables.net-buttons/js/dataTables.buttons.min.js' %}"></script>
-    <script src="{% static 'app/vendors/datatables.net-buttons-bs/js/buttons.bootstrap.min.js' %}"></script>
-    <script src="{% static 'app/vendors/datatables.net-buttons/js/buttons.flash.min.js' %}"></script>
-    <script src="{% static 'app/vendors/datatables.net-buttons/js/buttons.html5.min.js' %}"></script>
-    <script src="{% static 'app/vendors/datatables.net-buttons/js/buttons.print.min.js' %}"></script>
-    <script src="{% static 'app/vendors/datatables.net-fixedheader/js/dataTables.fixedHeader.min.js' %}"></script>
-    <script src="{% static 'app/vendors/datatables.net-keytable/js/dataTables.keyTable.min.js' %}"></script>
-    <script src="{% static 'app/vendors/datatables.net-responsive/js/dataTables.responsive.min.js' %}"></script>
-    <script src="{% static 'app/vendors/datatables.net-responsive-bs/js/responsive.bootstrap.js' %}"></script>
-    <script src="{% static 'app/vendors/datatables.net-scroller/js/dataTables.scroller.min.js' %}"></script>
+    <script src="{% static 'app/vendors/datatables.net/datatables.min.js' %}"></script>
+    <script src="{% static 'app/vendors/datatables.net/datatables.material.min.js' %}"></script>
     <script>
         $(document).ready(function () {
-            $('#accountlist').on('processing.dt', function (e, settings, processing) {
-                $('#accountlist').css('opacity', processing ? '0.3' : '1.0');
+            dt = $('#transactionlist').on('processing.dt', function (e, settings, processing) {
+                $('#transactionlist').css('opacity', processing ? '0.3' : '1.0');
             }).DataTable({
                 "processing": true,
                 "serverSide": true,
-                "ajax": "{% url 'finance:impersonal_apiList' %}",
+                "ajax": "{% url 'finance:transaction_apiList' %}",
                 "language": {
                     "sProcessing": "<i class='fa fa-spin fa-spinner fa-3x'></i>",
                     "sEmptyTable": "{% trans 'sEmptyTable' %}",
@@ -73,9 +58,7 @@
                     "sInfoFiltered": "{% trans 'sInfoFiltered' %}",
                     "sInfoPostFix": "{% trans 'sInfoPostfix' %}",
                     "sInfoThousands": "{% trans 'sInfoThousands' %}",
-                    "sLengthMenu": "{% trans 'sLengthMenu' %}",
                     "sLoadingRecords": "{% trans 'sLoadingRecords' %}",
-                    "sSearch": "{% trans 'sSearch' %}",
                     "sZeroRecords": "{% trans 'sZeroRecords' %}",
                     "oPaginate": {
                         "sFirst": "{% trans 'sFirst' %}",
@@ -92,17 +75,70 @@
                     true,
                 "columns":
                     [
-                        {"data": "number"},
-                        {"data": "name"},
+                        {
+                            "data": "date",
+                            "className": "mdl-data-table__cell--non-numeric"
+                        },
+                        {
+                            "data": "document_number",
+                            "fnCreatedCell": function (nTd, sData, oData, iRow, iCol) {
+                                $(nTd).html("<a href='" + oData.transaction_url + "'>" + oData.document_number + "</a>");
+                            },
+                            "className": "mdl-data-table__cell--non-numeric"
+                        },
+                        {
+                            "data": "account",
+                            "fnCreatedCell": function (nTd, sData, oData, iRow, iCol) {
+                                $(nTd).html("<a href='" + oData.account_url + "'>" + oData.account + "</a>");
+                            },
+                            "className": "mdl-data-table__cell--non-numeric"
+                        },
+                        {
+                            "data": "text",
+                            "className": "mdl-data-table__cell--non-numeric"
+                        },
+                        {
+                            "data": "debit"
+                        },
+                        {
+                            "data": "credit"
+                        },
+                        {
+                            "data": "cost_center",
+                            "fnCreatedCell": function (nTd, sData, oData, iRow, iCol) {
+                                $(nTd).html("<a href='" + oData.cost_center_url + "'>" + oData.cost_center + "</a>");
+                            },
+                            "className": "mdl-data-table__cell--non-numeric"
+                        },
+                        {
+                            "data": "cost_object",
+                            "fnCreatedCell": function (nTd, sData, oData, iRow, iCol) {
+                                $(nTd).html("<a href='" + oData.cost_object_url + "'>" + oData.cost_object + "</a>");
+                            },
+                            "className": "mdl-data-table__cell--non-numeric"
+                        },
                     ],
-                "createdRow":
-                    function (row, data, index) {
-                        $(row).click(function () {
-                            window.location = data.detail_url;
-                        });
-                    }
             });
-            $(".dataTables_wrapper select, .dataTables_wrapper :input").addClass("form-control input-sm");
+            // Search
+            $("#transactionlist_filter").html('<div class="mdc-text-field"><input type="text" id="datatable-search" class="mdc-text-field__input"><label class="mdc-floating-label" for="datatable-search">{% trans 'sSearch' %}</label><div class="mdc-line-ripple"></div></div>');
+            $("#datatable-search").on('keyup', function(e) {
+                dt.search(this.value).draw();
+            })
+
+            // Itemsselect
+            $("#transactionlist_length").html('<div class="mdc-select">' + $('#transactionlist_length select')[0].outerHTML + '<label class="mdc-floating-label">{% trans 'sLengthMenu' %}</label><div class="mdc-line-ripple"></div></div>');
+            $(".mdc-select select").addClass("mdc-select__native-control");
+            $('#transactionlist_length select').on('change', function (e) {
+                dt.page.len(this.value).draw();
+            });
+            
+
+            // Select
+            select = new mdc.select.MDCSelect(document.querySelector('.mdc-select'));
+            // Lineripple
+            lineRipple = new mdc.lineRipple.MDCLineRipple(document.querySelector('.mdc-line-ripple'));
+            // Textfield
+            textField = new mdc.textField.MDCTextField(document.querySelector('.mdc-text-field'));
         })
         ;
     </script>
