--- a/pyVerein/finance/templates/finance/transaction/create.html
+++ b/pyVerein/finance/templates/finance/transaction/create.html
@@ -19,29 +19,6 @@
 {% endblock %}
 
 {% block content %}
-    {% comment %} <div class="modal fade" tabindex="-1" role="dialog" id="selection-dialog">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <div class="heading"></div>
-                </div>
-                <div class="modal-body">
-                    <table id="account-list" class="mdl-data-table dataTable"
-                        cellspacing="0"
-                        width="100%">
-                        <thead>
-                        <tr>
-                            <th></th>
-                            <th></th>
-                            <th></th>
-                        </tr>
-                        </thead>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div> {% endcomment %}
     <aside class="mdc-dialog" id="selection-dialog">
         <div class="mdc-dialog__surface">
             <header class="mdc-dialog__header">
@@ -111,31 +88,18 @@
                 </div>
                 <div class="form-group">
                     {% trans 'Cost center' as cost_center_label %}
-                    <div class="mdc-text-field mdc-input">
-                        {% render_field form.cost_center class+="mdc-text-field__input" data-next='id_cost_object' %}
-                        <label class="mdc-floating-label" for="{{ field.id_for_label }}">
-                            {{ cost_center_label }}
-                        </label>
-                        <div class="mdc-line-ripple"></div>
-                    </div>
+                    {% include "utils/_textfield.html" with field=form.cost_center label=cost_center_label next='id_cost_object' %}
                     <p id="info_cost_center" class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent" aria-hidden="true"></p>
                 </div>
                 <div class="form-group">
                     {% trans 'Cost object' as cost_object_label %}
-                    <div class="mdc-text-field mdc-input">
-                        {% render_field form.cost_object class+="mdc-text-field__input" data-next='id_cost_object' %}
-                        <label class="mdc-floating-label" for="{{ field.id_for_label }}">
-                            {{ cost_object_label }}
-                        </label>
-                        <div class="mdc-line-ripple"></div>
-                        
-                    </div>
+                    {% include "utils/_textfield.html" with field=form.cost_object label=cost_object_label %}
                     <p id="info_cost_object" class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent" aria-hidden="true"></p>
                 </div>
 
                 <div class="form-group form-submit">
                     <input type="submit" class="mdc-button mdc-button--raised" value="{% trans 'Save' %}" />
-                    <a href="{% url 'app:index' %}" class="mdc-button">{% trans 'Cancel' %}</a>
+                    <a href="{% url 'finance:transaction_list' %}" class="mdc-button">{% trans 'Cancel' %}</a>
                 </div>
             </form>
             <div class="heading mdc-typography--overline" style="margin-top:30px;">
@@ -248,15 +212,17 @@
                                             $(nTd).html('<a href="javascript:selectFromModal(\x27' + oData.number + '\x27, \x27' + oData.name + '\x27, \x27' + input_selector + '\x27, \x27' + info_selector + '\x27);"><i class="fa fa-check-circle"></i></a>');
                                         },
                                         'width': '42px',
-                                        'className': 'text-center'
+                                        'className': 'text-center mdl-data-table__cell--non-numeric'
                                     },
                                     {
                                         'data': 'number',
-                                        'title': number_heading
+                                        'title': number_heading,
+                                        'className': 'mdl-data-table__cell--non-numeric'
                                     },
                                     {
                                         'data': 'name',
-                                        'title': name_heading
+                                        'title': name_heading,
+                                        'className': 'mdl-data-table__cell--non-numeric'
                                     },
                                     
                                 ],
