--- a/pyVerein/app/templates/app/_drawer.html
+++ b/pyVerein/app/templates/app/_drawer.html
@@ -32,7 +32,7 @@
                     <li class="mdc-list-item {% base_url_class 'finance:transaction_list' 'mdc-list-item--activated'%}">
                         <a href="{% url 'finance:transaction_list' %}">
                             <span class="mdc-list-item__graphic fa fa-file-alt" aria-hidden="true"></span>
-                            <span class="mdc-list-item__text">{% trans 'Transactions' %}</span>
+                            <span class="mdc-list-item__text">{% trans 'Receipts' %}</span>
                         </a>
                     </li>
                     <li class="mdc-list-item {% base_url_class 'finance:debitor_list' 'mdc-list-item--activated'%}">
