--- a/pyVerein/finance/templates/finance/transaction/detail.html
+++ b/pyVerein/finance/templates/finance/transaction/detail.html
@@ -2,12 +2,19 @@
 {% load i18n %}
 {% load static %}
 
+{% block head %}
+    <!-- DataTables -->
+    <link rel="stylesheet" href="{% static 'app/vendors/datatables.net/material.min.css' %}">
+    <link rel="stylesheet" href="{% static 'app/vendors/datatables.net/datatables.material.min.css' %}">
+    
+{% endblock %}
+
 {% block page_title %}
-    {% trans 'Transaction-Detail' %}
+    {% trans 'Receipt-Detail' %}
 {% endblock %}
 
 {% block title %}
-    {% trans 'Transaction-Detail' %}
+    {% trans 'Receipt-Detail' %}
 {% endblock %}
 
 {% block content %}
@@ -18,51 +25,62 @@
             </div>
             <div class="row">
                 <div class="field-title">{% trans 'Date' %}</div>
-                <div class="field-value">{{ transaction.date|default_if_none:"" }}</div>
+                <div class="field-value">{{ date|default_if_none:"" }}</div>
             </div>
             <div class="row">
                 <div class="field-title">{% trans 'Document number' %}</div>
-                <div class="field-value">{{ transaction.document_number|default_if_none:"" }}</div>
+                <div class="field-value">{{ document_number|default_if_none:"" }}</div>
             </div>
         
             <div class="heading mdc-typography--overline">
-                {% trans 'Transaction' %}
+                {% trans 'Transactions' %}
             </div>
             <div class="row">
-                <div class="field-title">{% trans 'Account' %}</div>
-                <div class="field-value">{{ transaction.account.number|default_if_none:"" }} {{ transaction.account.name|default_if_none:"" }}</div>
+                <table id="transactions" class="mdl-data-table mdl-js-data-table mdl-data-table--non-linkable" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th class="mdl-data-table__cell--non-numeric">{% trans 'Account' %}</th>
+                            <th class="mdl-data-table__cell--non-numeric">{% trans 'Transaction text' %}</th>
+                            <th>{% trans 'Debit' %}</th>
+                            <th>{% trans 'Credit' %}</th>
+                            <th>{% trans 'Cost center' %}</th>
+                            <th>{% trans 'Cost object' %}</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for transaction in transactions %}
+                            <tr>
+                                <td class="mdl-data-table__cell--non-numeric">
+                                    {{ transaction.account.number }}
+                                </td>
+                                <td class="mdl-data-table__cell--non-numeric">
+                                    {{ transaction.text }}
+                                </td>
+                                <td>
+                                    {{ transaction.debit|default_if_none:"" }}
+                                </td>
+                                <td>
+                                    {{ transaction.credit|default_if_none:"" }}
+                                </td>
+                                <td>
+                                    {{ transaction.cost_center.number|default_if_none:"" }}
+                                </td>
+                                <td>
+                                    {{ transaction.cost_object.number|default_if_none:"" }}
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
             </div>
-            <div class="row">
-                <div class="field-title">{% trans 'Debit' %}</div>
-                <div class="field-value">{{ transaction.debit|default_if_none:"" }}</div>
-            </div>
-            <div class="row">
-                <div class="field-title">{% trans 'Credit' %}</div>
-                <div class="field-value">{{ transaction.credit|default_if_none:"" }}</div>
-            </div>
-            <div class="row">
-                <div class="field-title">{% trans 'Transaction text' %}</div>
-                <div class="field-value">{{ transaction.text|default_if_none:"" }}</div>
-            </div>
-
-            <div class="heading mdc-typography--overline">
-                {% trans 'Costing' %}
-            </div>
-            <div class="row">
-                <div class="field-title">{% trans 'Cost center' %}</div>
-                <div class="field-value">{{ transaction.cost_center.number|default_if_none:"" }} {{ transaction.cost_center.name|default_if_none:"" }}</div>
-            </div>
-            <div class="row">
-                <div class="field-title">{% trans 'Cost object' %}</div>
-                <div class="field-value">{{ transaction.cost_object.number|default_if_none:"" }} {{ transaction.cost_object.name|default_if_none:"" }}</div>
-            </div>
+            
         </div>
     </div>
     
     <a href ="{% url 'finance:transaction_list' %}" class="mdc-fab mdc-fab--absolute-bottom-left" aria-label="">
             <i class="mdc-fab__icon fa fa-arrow-left"></i>
         </a>
-    <a href ="{% url 'finance:transaction_edit' pk=transaction.pk %}" class="mdc-fab mdc-fab--absolute-bottom-right" aria-label="">
+    <a href ="{% url 'finance:transaction_edit' internal_number=internal_number step=0%}" class="mdc-fab mdc-fab--absolute-bottom-right" aria-label="">
         <i class="mdc-fab__icon fa fa-pencil-alt"></i>
     </a>
 {% endblock %}
