--- a/pyVerein/finance/templates/finance/transaction/edit.html
+++ b/pyVerein/finance/templates/finance/transaction/edit.html
@@ -1,102 +1,250 @@
-{% extends 'app/base.html' %} 
-{% load i18n %} 
-{% load widget_tweaks %} 
-{% load static %} 
-{% get_current_language as LANGUAGE_CODE%} 
+{% extends 'app/base.html' %}
+{% load i18n %}
+{% load widget_tweaks %}
+{% load static %}
+{% get_current_language as LANGUAGE_CODE %}
 
 {% block head %}
-    <!-- iCheck style -->
-    <link rel="stylesheet" href="{% static 'app/vendors/iCheck/skins/square/blue.css' %}"> 
-{% endblock %} 
-{% block title %} 
-    {% trans 'Edit impersonal Account' %} 
-{% endblock %} 
+    <!-- DataTables -->
+    <link rel="stylesheet" href="{% static 'app/vendors/datatables.net/material.min.css' %}">
+    <link rel="stylesheet" href="{% static 'app/vendors/datatables.net/datatables.material.min.css' %}">
+{% endblock %}
+
+{% block page_title %}
+    {% trans 'Edit receipt' %}
+{% endblock %}
+
+{% block title %}
+    {% trans 'Edit receipt' %}
+{% endblock %}
+
 {% block content %}
-<div class="row">
-    <div class="col-md-12">
-        <div class="x_panel">
-            <div class="x_title">
-                <h1>{{ transaction.document_number }} {{ impersonal.text }}</h1>
+    <aside class="mdc-dialog" id="selection-dialog">
+        <div class="mdc-dialog__surface">
+            <header class="mdc-dialog__header">
+                <h2 class="mdc-dialog__header__title">
+                </h2>
+            </header>
+            <section id="mdc-dialog-with-list-description" class="mdc-dialog__body mdc-dialog__body--scrollable">
+                <table id="selection-list" class="mdl-data-table dataTable"
+                    cellspacing="0"
+                    width="100%">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                </table>
+            </section>
+            <footer class="mdc-dialog__footer">
+                <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--cancel mdc-button--outlined">{% trans 'Close' %}</button>
+            </footer>
+        </div>
+    </aside>
+    <div class="main-narrow">
+        <div class="detail-content  mdc-elevation--z4">
+            <form action="{{ save_url }}" method="POST" class="form-horizontal" data-toggle="validator" id="form">
+                {% csrf_token %}
+                <div class="heading mdc-typography--overline">
+                    {% trans 'General' %}
+                </div>
+                    <div class="row">
+                        <div class="field-title">{% trans 'Date' %}</div>
+                        <div class="field-value">{{ transaction.date|default_if_none:"" }}</div>
+                    </div>
+                    <div class="row">
+                        <div class="field-title">{% trans 'Document number' %}</div>
+                        <div class="field-value">{{ transaction.document_number|default_if_none:"" }}</div>
+                    </div>
+                <div class="heading mdc-typography--overline">
+                    {% trans 'Transaction' %}
+                </div>
+                <div class="row">
+                    <div class="field-title">{% trans 'Account' %}</div>
+                    <div class="field-value">{{ transaction.account }}</div>
+                </div>
+                <div class="row">
+                    <div class="field-title">{% trans 'Debit' %}</div>
+                    <div class="field-value">{{ transaction.debit|default_if_none:"" }}</div>
+                </div>
+                <div class="row">
+                    <div class="field-title">{% trans 'Credit' %}</div>
+                    <div class="field-value">{{ transaction.credit|default_if_none:"" }}</div>
+                </div>
+                <div class="form-group full-width">
+                    {% trans 'Transaction text' as text_label %}
+                    {% include "utils/_textfield.html" with field=form.text label=text_label next='id_cost_center' %}
+                </div>
+                <div class="heading mdc-typography--overline">
+                    {% trans 'Costing' %}
+                </div>
+                <div class="form-group">
+                    {% trans 'Cost center' as cost_center_label %}
+                    {% include "utils/_textfield.html" with field=form.cost_center label=cost_center_label next='id_cost_object' %}
+                    <p id="info_cost_center" class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent" aria-hidden="true"></p>
+                </div>
+                <div class="form-group">
+                    {% trans 'Cost object' as cost_object_label %}
+                    {% include "utils/_textfield.html" with field=form.cost_object label=cost_object_label %}
+                    <p id="info_cost_object" class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent" aria-hidden="true"></p>
+                </div>
+                <div class="form-group form-submit">
+                    <input type="submit" class="mdc-button mdc-button--raised" value="{% trans 'Save' %}" />
+                    <a href="{% url 'finance:transaction_detail' internal_number=internal_number %}" class="mdc-button">{% trans 'Cancel' %}</a>
+                </div>
+            </form>
+            <div class="heading mdc-typography--overline" style="margin-top:30px;">
+                {% trans 'Corresponding transactions' %}
             </div>
-            <div class="x_content data">
-                <form action="{% url 'finance:transaction_edit' transaction.pk %}" method="POST" class="form-horizontal" data-toggle="validator" id="form">
-                    {% csrf_token %}
-                    <div class="page-header">
-                        {% trans 'General' %}
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-3 field-title">{% trans 'Date' %}</div>
-                        <div class="col-md-5 value">
-                            <div class="input-group date">{% render_field form.date class+="form-control" data-next="id_document_number" autofocus="autofocus" %}<span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span></div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-3 field-title">{% trans 'Document number' %}</div>
-                        <div class="col-md-5 value ">{% render_field form.document_number class+="form-control" data-next="id_account" %}<span class="help-block with-errors"></span></div>
-                    
-                    </div>
-                    <div class="page-header">
-                        {% trans 'Transaction' %}
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-3 field-title">{% trans 'Account' %}</div>
-                        <div class="col-md-5 value">{% render_field form.account class+="form-control" data-next="id_debit" %}<span class="help-block with-errors"></span></div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-3 field-title">{% trans 'Debit' %}</div>
-                        <div class="col-md-5 value">{% render_field form.debit class+="form-control" data-next="id_credit" %}<span class="help-block with-errors"></span></div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-3 field-title">{% trans 'Credit' %}</div>
-                        <div class="col-md-5 value">{% render_field form.credit class+="form-control" data-next="id_text" %}<span class="help-block with-errors"></span></div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-3 field-title">{% trans 'Transaction text' %}</div>
-                        <div class="col-md-5 value">{% render_field form.text class+="form-control" data-next="id_cost_center" %}<span class="help-block with-errors"></span></div>
-                    </div>
-                    <div class="page-header">
-                        {% trans 'Costing' %}
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-3 field-title">{% trans 'Cost center' %}</div>
-                        <div class="col-md-5 value">{% render_field form.cost_center class+="form-control" data-next="id_cost_object" %}<span class="help-block with-errors"></span></div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-3 field-title">{% trans 'Cost object' %}</div>
-                        <div class="col-md-5 value">{% render_field form.cost_object class+="form-control" %}<span class="help-block with-errors"></span></div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-2 col-md-offset-3">
-                            <input type="submit" class="btn btn-success btn-block" value="{% trans 'Save' %}" />
-                        </div>
-                        <div class="col-md-2 col-md-offset-1">
-                            <a href="{% url 'finance:impersonal_detail' pk=impersonal.pk %}" class="btn btn-danger btn-block">{% trans 'Cancel' %}</a>
-                        </div>
-                    </div>
-                </form>
-            </div>
+            <table id="transactions" class="mdl-data-table dataTable" cellspacing="0" width="100%">
+                <thead>
+                    <tr>
+                        <th class="mdl-data-table__cell--non-numeric">{% trans 'Account' %}</th>
+                        <th>{% trans 'Debit' %}</th>
+                        <th>{% trans 'Credit' %}</th>
+                        <th class="mdl-data-table__cell--non-numeric">{% trans 'Cost center' %}</th>
+                        <th class="mdl-data-table__cell--non-numeric">{% trans 'Cost object' %}</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for key, transaction in transactions.items %}
+                        <tr data-step="{% url 'finance:transaction_edit' internal_number=internal_number step=key %}">
+                            <td class="mdl-data-table__cell--non-numeric">
+                                {{ transaction.account }}
+                            </td>
+                            <td>
+                                {{ transaction.debit|floatformat:2|default_if_none:"" }}
+                            </td>
+                            <td>
+                                {{ transaction.credit|floatformat:2|default_if_none:"" }}
+                            </td>
+                            <td class="mdl-data-table__cell--non-numeric">
+                                {{ transaction.cost_center|default_if_none:"" }}
+                            </td>
+                            <td class="mdl-data-table__cell--non-numeric">
+                                {{ transaction.cost_object|default_if_none:"" }}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
     </div>
-</div>
-{% endblock %} 
-{% block foot %}
-    <!-- Validator -->
-    <script src="{% static 'app/vendors/bootstrap-validator/dist/validator.min.js' %}"></script>
-    <!-- icheck -->
-    <script src="{% static 'app/vendors/iCheck/icheck.js' %}"></script>
+    {% if transactions %}
+        <div class="mdc-elevation--z4">
+            
+        </div>
+    {% endif %}
+{% endblock %}
 
-    <script type="application/javascript">
-        $('input').iCheck({
-            checkboxClass: 'icheckbox_square',
-            increaseArea: '20%',
-            radioClass: 'iradio_square-blue',
-        });
-    </script> 
+{% block foot %}
     <!-- Keys -->
     <script src="{% static 'app/js/keys.js' %}"></script>
     <script>
         $('#form').saveOnTimes();
         $('#form').nextOnEnter();
-        $('#form').exitOnEsc("{% url 'finance:impersonal_detail' pk=impersonal.pk %}");
+        {% if not transactions %}
+            $('#form').exitOnEsc("{% url 'finance:transaction_detail' internal_number=internal_number %}");
+        {% endif %}
+    </script>
+    
+    <!-- Inputmask -->
+    <script src="{% static 'app/vendors/jquery.inputmask/dist/jquery.inputmask.bundle.js' %}"></script>
+    <script>
+        $("#id_date").inputmask("99.99.9999");
+    </script>
+
+    <!-- Datatables -->
+    <script src="{% static 'app/vendors/datatables.net/datatables.min.js' %}"></script>
+    <script src="{% static 'app/vendors/datatables.net/datatables.material.min.js' %}"></script>
+    <!-- Api -->
+    <script>
+        const selection_dialog = new mdc.dialog.MDCDialog(document.querySelector('#selection-dialog'));
+        
+        $('#id_account').focusout(function (){
+            showAccountSelection('#id_account', '#info_account', "{% url 'finance:account_search' search='###SEARCH###' %}", "{% trans 'Select account' %}", "{% trans 'Account number' %}", "{% trans 'Account name' %}")  
+        });
+        $('#id_cost_center').focusout(function (){
+            showAccountSelection('#id_cost_center', '#info_cost_center', "{% url 'finance:costcenter_search' search='###SEARCH###' %}", "{% trans 'Select cost center' %}", "{% trans 'Cost center number' %}", "{% trans 'Cost center name' %}")  
+        });
+        $('#id_cost_object').focusout(function (){
+            showAccountSelection('#id_cost_object', '#info_cost_object', "{% url 'finance:costobject_search' search='###SEARCH###' %}", "{% trans 'Select cost object' %}", "{% trans 'Cost object number' %}", "{% trans 'Cost object name' %}")  
+        });
+
+        function showAccountSelection(input_selector, info_selector, url, modal_header, number_heading, name_heading){
+            var input_field = $(input_selector);
+            var info_field = $(info_selector);
+            if (input_field.val() != ""){
+                $.getJSON(decodeURIComponent(url).replace("###SEARCH###", input_field.val()), function(data){
+                    data = data['data'];
+                    switch (data.length){
+                        case 0: 
+                            setAccount(input_field, input_field.val(), info_field, '');
+                            input_field.focus();
+                            input_field.parents('.form-group').addClass('has-error');
+                            break;
+                        case 1: 
+                            input_field.parents('.form-group').removeClass('has-error');
+                            setAccount(input_field, data[0]['number'], info_field, data[0]['name']);
+                            break;
+                        default: 
+                            $('#selection-list').DataTable({
+                                'data': data,
+                                'paging': false,
+                                'searching': false,
+                                'ordering':  false,
+                                'info': false,
+                                'autoWidth': false,
+                                'destroy': true,
+                                'columns':[
+                                    {
+                                        'data': null,
+                                        'fnCreatedCell': function (nTd, sData, oData, iRow, iCol) {
+                                            $(nTd).html('<a href="javascript:selectFromModal(\x27' + oData.number + '\x27, \x27' + oData.name + '\x27, \x27' + input_selector + '\x27, \x27' + info_selector + '\x27);"><i class="fa fa-check-circle"></i></a>');
+                                        },
+                                        'width': '42px',
+                                        'className': 'text-center mdl-data-table__cell--non-numeric'
+                                    },
+                                    {
+                                        'data': 'number',
+                                        'title': number_heading,
+                                        'className': 'mdl-data-table__cell--non-numeric'
+                                    },
+                                    {
+                                        'data': 'name',
+                                        'title': name_heading,
+                                        'className': 'mdl-data-table__cell--non-numeric'
+                                    },
+                                    
+                                ],
+                            });
+                            $('#selection-dialog .mdc-dialog__header__title').html(modal_header)
+                            
+                            selection_dialog.lastFocusedTarget = this;
+                            selection_dialog.show();
+                            break;
+                    }
+                });
+            }
+        }
+        function selectFromModal(number, name, input_selector, info_selector){
+            var input_field = $(input_selector);
+            var info_field = $(info_selector);
+            setAccount(input_field, number,info_field, name);
+            selection_dialog.close();
+            var next = $('#' + input_field.data('next'));
+            next.focus();
+        }
+        function setAccount(input_field, field_val, info_field, info_val){
+            input_field.val(field_val);
+            info_field.html(info_val);
+        }
+
+        // Steps
+        $('tr').on('click', function(){
+            window.location = $(this).data('step');
+        })
     </script>
 {% endblock %}
